# radioxide

./: .editorconfig  CLAUDE.md  Cargo.toml  DEVELOPMENT.md  LICENSE-APACHE  LICENSE-MIT  README.md  installer.nsi
.claude/: settings.local.json
.github/workflows/: ci.yml
packaging/: flatpak-manifest.json
radioxide-cli/: Cargo.toml
radioxide-cli/src/: main.rs
radioxide-daemon/: Cargo.toml
radioxide-daemon/src/: main.rs
radioxide-daemon/src/radio/: dummy.rs  mod.rs
radioxide-daemon/src/radio/yaesu/: cat.rs  ft450d.rs  mod.rs  serial.rs
radioxide-daemon/tests/: integration.rs
radioxide-gui/: Cargo.toml
radioxide-gui/resources/locales/en-US/: radio.ftl
radioxide-gui/src/: i18n.rs  knob.rs  main.rs  styles.rs  theme.rs  widgets.rs
radioxide-proto/: Cargo.toml
radioxide-proto/src/: lib.rs
radioxide-transports/: Cargo.toml
radioxide-transports/src/: lib.rs
