[package]
name = "radioxide-daemon"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
radioxide-proto = { path = "../radioxide-proto" }
radioxide-transports = { path = "../radioxide-transports" }
async-trait = "0.1.89"
thiserror = "2.0.18"
clap = { version = "4.6.0", features = ["derive"] }
tokio-serial = "5.4.5"
