[package]
name = "radioxide-daemon"
version = "0.1.0"
edition = "2024"
license.workspace = true

[dependencies]
tokio = { version = "1", features = ["full"] }
radioxide-proto = { path = "../radioxide-proto" }
radioxide-transports = { path = "../radioxide-transports" }
async-trait = "0.1.89"
thiserror = "2.0.18"
tokio-serial = "5.4.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "6"
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
