[package]
name = "radioxide-gui"
version = "0.1.0"
edition = "2024"
license.workspace = true

[dependencies]
iced = { version = "0.13.0", features = ["canvas", "svg"] }
tokio = { version = "1", features = ["full"] }
radioxide-proto = { path = "../radioxide-proto" }
radioxide-transports = { path = "../radioxide-transports" }
fluent = "0.16"
fluent-bundle = "0.15"
fluent-syntax = "0.11"
unic-langid = "0.9"
sys-locale = "0.3"
