[package]
name = "radioxide-transports"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
radioxide-proto = { path = "../radioxide-proto" }
serde_json = "1.0.147"

[target.'cfg(target_os = "linux")'.dependencies]
zbus = "3.12"
